grammar/grammar.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Start: peg$parseStart },
        peg$startRuleFunction  = peg$parseStart,

        peg$c0 = "please",
        peg$c1 = peg$literalExpectation("please", false),
        peg$c2 = function(command) { return command },
        peg$c3 = "an",
        peg$c4 = peg$literalExpectation("an", false),
        peg$c5 = "a",
        peg$c6 = peg$literalExpectation("a", false),
        peg$c7 = "the",
        peg$c8 = peg$literalExpectation("the", false),
        peg$c9 = "set",
        peg$c10 = peg$literalExpectation("set", false),
        peg$c11 = "if",
        peg$c12 = peg$literalExpectation("if", false),
        peg$c13 = "repeat",
        peg$c14 = peg$literalExpectation("repeat", false),
        peg$c15 = "comparison",
        peg$c16 = peg$literalExpectation("comparison", false),
        peg$c17 = "arithmetic",
        peg$c18 = peg$literalExpectation("arithmetic", false),
        peg$c19 = "print",
        peg$c20 = peg$literalExpectation("print", false),
        peg$c21 = "text",
        peg$c22 = peg$literalExpectation("text", false),
        peg$c23 = "number",
        peg$c24 = peg$literalExpectation("number", false),
        peg$c25 = "variable",
        peg$c26 = peg$literalExpectation("variable", false),
        peg$c27 = "away",
        peg$c28 = peg$literalExpectation("away", false),
        peg$c29 = function(block, where) { return {
           "action": "move",
           "block": block,
           "where": where
        } },
        peg$c30 = "move",
        peg$c31 = peg$literalExpectation("move", false),
        peg$c32 = "attach",
        peg$c33 = peg$literalExpectation("attach", false),
        peg$c34 = "block",
        peg$c35 = peg$literalExpectation("block", false),
        peg$c36 = function(type) { return type },
        peg$c37 = function(number) { return number },
        peg$c38 = function(position, block) { return {
           "block": block,
           "position": position
        } },
        peg$c39 = "to the trash",
        peg$c40 = peg$literalExpectation("to the trash", false),
        peg$c41 = function() { return "trash" },
        peg$c42 = /^[0-9]/,
        peg$c43 = peg$classExpectation([["0", "9"]], false, false),
        peg$c44 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c45 = /^[a-zA-Z]/,
        peg$c46 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
        peg$c47 = function(value) { return value.join("") },
        peg$c48 = " ",
        peg$c49 = peg$literalExpectation(" ", false),
        peg$c50 = function(car, w) { return w },
        peg$c51 = function(car, cdr) { return [car].concat(cdr).join(" ") },
        peg$c52 = function(type) { return {
           "action": "add",
           "type": type
        } },
        peg$c53 = function(type, where) { return {
           "action": "add",
           "type": type,
           "where": where
        } },
        peg$c54 = function(type, name) { return {
           "action": "add",
           "type": type,
           "value": name
        } },
        peg$c55 = function(type, name, where) { return {
           "action": "add",
           "type": type,
           "value": name,
           "where": where
        } },
        peg$c56 = "add",
        peg$c57 = peg$literalExpectation("add", false),
        peg$c58 = "insert",
        peg$c59 = peg$literalExpectation("insert", false),
        peg$c60 = "make",
        peg$c61 = peg$literalExpectation("make", false),
        peg$c62 = "called",
        peg$c63 = peg$literalExpectation("called", false),
        peg$c64 = "named",
        peg$c65 = peg$literalExpectation("named", false),
        peg$c66 = function(block) { return {
           "action": "delete",
           "block": block
        } },
        peg$c67 = "delete",
        peg$c68 = peg$literalExpectation("delete", false),
        peg$c69 = "remove",
        peg$c70 = peg$literalExpectation("remove", false),
        peg$c71 = "erase",
        peg$c72 = peg$literalExpectation("erase", false),
        peg$c73 = "in",
        peg$c74 = peg$literalExpectation("in", false),
        peg$c75 = function(block, pair) {
           pair["action"] = "modify"
           pair["block"] = block
           return pair
        },
        peg$c76 = "change",
        peg$c77 = peg$literalExpectation("change", false),
        peg$c78 = "to",
        peg$c79 = peg$literalExpectation("to", false),
        peg$c80 = function(value) { return {
           "property": "operation",
           "value": value
        } },
        peg$c81 = "operation",
        peg$c82 = peg$literalExpectation("operation", false),
        peg$c83 = "operator",
        peg$c84 = peg$literalExpectation("operator", false),
        peg$c85 = function() { return "operation" },
        peg$c86 = "addition",
        peg$c87 = peg$literalExpectation("addition", false),
        peg$c88 = "plus",
        peg$c89 = peg$literalExpectation("plus", false),
        peg$c90 = function() { return "+" },
        peg$c91 = "subtract",
        peg$c92 = peg$literalExpectation("subtract", false),
        peg$c93 = "minus",
        peg$c94 = peg$literalExpectation("minus", false),
        peg$c95 = "subtraction",
        peg$c96 = peg$literalExpectation("subtraction", false),
        peg$c97 = function() { return "-" },
        peg$c98 = "multiply",
        peg$c99 = peg$literalExpectation("multiply", false),
        peg$c100 = "times",
        peg$c101 = peg$literalExpectation("times", false),
        peg$c102 = "multiplication",
        peg$c103 = peg$literalExpectation("multiplication", false),
        peg$c104 = function() { return "*" },
        peg$c105 = "divide",
        peg$c106 = peg$literalExpectation("divide", false),
        peg$c107 = "division",
        peg$c108 = peg$literalExpectation("division", false),
        peg$c109 = function() { return "/" },
        peg$c110 = "power",
        peg$c111 = peg$literalExpectation("power", false),
        peg$c112 = "exponentiation",
        peg$c113 = peg$literalExpectation("exponentiation", false),
        peg$c114 = function() { return "^" },
        peg$c115 = "variable name to",
        peg$c116 = peg$literalExpectation("variable name to", false),
        peg$c117 = function(name) { return {
           "property": "name",
           "value": name
        } },
        peg$c118 = function(comparison) { return {
           "property": "comparison",
           "value": comparison
        } },
        peg$c119 = "equals",
        peg$c120 = peg$literalExpectation("equals", false),
        peg$c121 = function() { return "==" },
        peg$c122 = "not equals",
        peg$c123 = peg$literalExpectation("not equals", false),
        peg$c124 = "not equal to",
        peg$c125 = peg$literalExpectation("not equal to", false),
        peg$c126 = function() { return "≠" },
        peg$c127 = "greater than or equal to",
        peg$c128 = peg$literalExpectation("greater than or equal to", false),
        peg$c129 = function() { return ">=" },
        peg$c130 = "less than or equal to",
        peg$c131 = peg$literalExpectation("less than or equal to", false),
        peg$c132 = function() { return "<=" },
        peg$c133 = "greater than",
        peg$c134 = peg$literalExpectation("greater than", false),
        peg$c135 = function() { return ">" },
        peg$c136 = "less than",
        peg$c137 = peg$literalExpectation("less than", false),
        peg$c138 = function() { return "<" },
        peg$c139 = function(number) { return {
           "property": "number",
           "value": number
        } },
        peg$c140 = function(text) { return {
           "property": "text",
           "value": text
        } },
        peg$c141 = "above",
        peg$c142 = peg$literalExpectation("above", false),
        peg$c143 = "before",
        peg$c144 = peg$literalExpectation("before", false),
        peg$c145 = function() { return "above" },
        peg$c146 = "below",
        peg$c147 = peg$literalExpectation("below", false),
        peg$c148 = "after",
        peg$c149 = peg$literalExpectation("after", false),
        peg$c150 = function() { return "below" },
        peg$c151 = "inside",
        peg$c152 = peg$literalExpectation("inside", false),
        peg$c153 = "of",
        peg$c154 = peg$literalExpectation("of", false),
        peg$c155 = function() { return "inside" },
        peg$c156 = "into",
        peg$c157 = peg$literalExpectation("into", false),
        peg$c158 = "first blank",
        peg$c159 = peg$literalExpectation("first blank", false),
        peg$c160 = "first field",
        peg$c161 = peg$literalExpectation("first field", false),
        peg$c162 = "lefthand side",
        peg$c163 = peg$literalExpectation("lefthand side", false),
        peg$c164 = "left",
        peg$c165 = peg$literalExpectation("left", false),
        peg$c166 = function() { return "lhs" },
        peg$c167 = "second blank",
        peg$c168 = peg$literalExpectation("second blank", false),
        peg$c169 = "second field",
        peg$c170 = peg$literalExpectation("second field", false),
        peg$c171 = "last field",
        peg$c172 = peg$literalExpectation("last field", false),
        peg$c173 = "last blank",
        peg$c174 = peg$literalExpectation("last blank", false),
        peg$c175 = "righthand side",
        peg$c176 = peg$literalExpectation("righthand side", false),
        peg$c177 = "right",
        peg$c178 = peg$literalExpectation("right", false),
        peg$c179 = function() { return "rhs" },
        peg$c180 = "at",
        peg$c181 = peg$literalExpectation("at", false),
        peg$c182 = "top",
        peg$c183 = peg$literalExpectation("top", false),
        peg$c184 = function() { return "top" },
        peg$c185 = "from",
        peg$c186 = peg$literalExpectation("from", false),
        peg$c187 = function() { return "away" },
        peg$c188 = "run the program",
        peg$c189 = peg$literalExpectation("run the program", false),
        peg$c190 = "run it",
        peg$c191 = peg$literalExpectation("run it", false),
        peg$c192 = "run",
        peg$c193 = peg$literalExpectation("run", false),
        peg$c194 = function() { return {
           "action": "run"
        } },
        peg$c195 = "undo",
        peg$c196 = peg$literalExpectation("undo", false),
        peg$c197 = function() { return {
           "action": "undo"
        } },
        peg$c198 = "redo",
        peg$c199 = peg$literalExpectation("redo", false),
        peg$c200 = function() { return {
           "action": "redo"
        } },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseStart() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$currPos;
      if (input.substr(peg$currPos, 6) === peg$c0) {
        s2 = peg$c0;
        peg$currPos += 6;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseMove();
        if (s2 === peg$FAILED) {
          s2 = peg$parseAdd();
          if (s2 === peg$FAILED) {
            s2 = peg$parseRemove();
            if (s2 === peg$FAILED) {
              s2 = peg$parseChange();
              if (s2 === peg$FAILED) {
                s2 = peg$parseRun();
                if (s2 === peg$FAILED) {
                  s2 = peg$parseUndo();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parseRedo();
                  }
                }
              }
            }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseArticle() {
      var s0;

      if (input.substr(peg$currPos, 2) === peg$c3) {
        s0 = peg$c3;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 97) {
          s0 = peg$c5;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s0 === peg$FAILED) {
          if (input.substr(peg$currPos, 3) === peg$c7) {
            s0 = peg$c7;
            peg$currPos += 3;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
        }
      }

      return s0;
    }

    function peg$parseType() {
      var s0;

      if (input.substr(peg$currPos, 3) === peg$c9) {
        s0 = peg$c9;
        peg$currPos += 3;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c11) {
          s0 = peg$c11;
          peg$currPos += 2;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
        if (s0 === peg$FAILED) {
          if (input.substr(peg$currPos, 6) === peg$c13) {
            s0 = peg$c13;
            peg$currPos += 6;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c14); }
          }
          if (s0 === peg$FAILED) {
            if (input.substr(peg$currPos, 10) === peg$c15) {
              s0 = peg$c15;
              peg$currPos += 10;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c16); }
            }
            if (s0 === peg$FAILED) {
              if (input.substr(peg$currPos, 10) === peg$c17) {
                s0 = peg$c17;
                peg$currPos += 10;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c18); }
              }
              if (s0 === peg$FAILED) {
                if (input.substr(peg$currPos, 5) === peg$c19) {
                  s0 = peg$c19;
                  peg$currPos += 5;
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c20); }
                }
                if (s0 === peg$FAILED) {
                  if (input.substr(peg$currPos, 4) === peg$c21) {
                    s0 = peg$c21;
                    peg$currPos += 4;
                  } else {
                    s0 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c22); }
                  }
                  if (s0 === peg$FAILED) {
                    if (input.substr(peg$currPos, 6) === peg$c23) {
                      s0 = peg$c23;
                      peg$currPos += 6;
                    } else {
                      s0 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c24); }
                    }
                    if (s0 === peg$FAILED) {
                      if (input.substr(peg$currPos, 8) === peg$c25) {
                        s0 = peg$c25;
                        peg$currPos += 8;
                      } else {
                        s0 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c26); }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseMove() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseMoveVerb();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseBlockToken();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseWhere();
              if (s5 === peg$FAILED) {
                if (input.substr(peg$currPos, 4) === peg$c27) {
                  s5 = peg$c27;
                  peg$currPos += 4;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c28); }
                }
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c29(s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseMoveVerb() {
      var s0;

      if (input.substr(peg$currPos, 4) === peg$c30) {
        s0 = peg$c30;
        peg$currPos += 4;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c31); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 6) === peg$c32) {
          s0 = peg$c32;
          peg$currPos += 6;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c33); }
        }
      }

      return s0;
    }

    function peg$parseBlockType() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseArticle();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseType();
          if (s3 !== peg$FAILED) {
            s4 = peg$currPos;
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              if (input.substr(peg$currPos, 5) === peg$c34) {
                s6 = peg$c34;
                peg$currPos += 5;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c35); }
              }
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c36(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseBlockToken() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c34) {
        s1 = peg$c34;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c35); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          if (input.substr(peg$currPos, 6) === peg$c23) {
            s4 = peg$c23;
            peg$currPos += 6;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c24); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseNumber();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c37(s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseWhere() {
      var s0;

      s0 = peg$parseBlockPosition();
      if (s0 === peg$FAILED) {
        s0 = peg$parseTrash();
      }

      return s0;
    }

    function peg$parseBlockPosition() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parsePosition();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseBlockToken();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c38(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseTrash() {
      var s0, s1;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 12) === peg$c39) {
        s1 = peg$c39;
        peg$currPos += 12;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c40); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c41();
      }
      s0 = s1;

      return s0;
    }

    function peg$parsePosition() {
      var s0;

      s0 = peg$parseAbove();
      if (s0 === peg$FAILED) {
        s0 = peg$parseBelow();
        if (s0 === peg$FAILED) {
          s0 = peg$parseInside();
          if (s0 === peg$FAILED) {
            s0 = peg$parseLeft();
            if (s0 === peg$FAILED) {
              s0 = peg$parseRight();
              if (s0 === peg$FAILED) {
                s0 = peg$parseTop();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseAway();
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseNumber() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c42.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c43); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c42.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c43); }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c44(s1);
      }
      s0 = s1;
